# freegpt-webui

./: .gitignore  Dockerfile  README.md  babel.cfg  config.json  docker-compose.yaml  docker-compose.yml  gerar.py  get_working_providers.py  install.bat  pyproject.toml  requirements.txt  run.py  start.bat  version.txt
.github/workflows/: docker-build-push.yml  sync-hugging.yml
api/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  setup.py  test.py
api/freeGPT/: __init__.py
api/freeGPT-bot/: README.md
api/freeGPT/alpaca/: __init__.py
api/freeGPT/gpt3/: __init__.py
api/freeGPT/gpt4/: __init__.py
apiGPT4/: .env  index.ts
apiGPT4/model/: index.ts
client/css/: api-key.css  background.css  button.css  buttons.css  checkbox.css  conversation.css  dropdown.css  field.css  global-light.css  global.css  hljs.css  label.css  main.css  message-input.css  message.css  options.css  select.css  settings.css  sidebar.css  stop-generating.css  style.css  theme-toggler.css  typing.css
client/html/: index.html
client/js/: api-key.js  change-language.js  chat.js  sidebar-toggler.js  theme-toggler.js
g4f/: README.md  __init__.py  active_providers.py  models.py  typing.py  utils.py
g4f/Provider/: Provider.py  __init__.py
g4f/Provider/Providers/: AiService.py  Aichat.py  Ails.py  Aws.py  Bard.py  Better.py  Bing.py  ChatFree.py  ChatgptAi.py  Chimera.py  Dfehub.py  Easychat.py  Ezcht.py  Fakeopen.py  Forefront.py  Naga.py  (+17 more)
server/: app.py  auto_proxy.py  babel.py  backend.py  bp.py  config.py  website.py
translations/: README.md
(+38 files in other folders)
