[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = "^3.2.4"
Flask = "^2.1.3"
colorama = "^0.4.6"
names = "^0.3.0"
python-dotenv = "^1.0.0"
streamlit = "^1.21.0"
TwoCaptcha = "^0.0.1"
websocket = "^0.2.1"
websockets = "^11.0.2"
browser-cookie3 = "^0.18.0"
fake-useragent = "^1.1.3"
selenium = "^4.9.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"